# tongfang-keyboard-control

./: .gitignore  .gitlab-ci.yml  Cargo.toml  PKGBUILD  README.md  docker-compose.yml  hook.install
docker/: docker-compose.yml
docker/arch/: Dockerfile
docker/fedora/: Dockerfile
examples/: 99-keyboard.rules  tongfang-keyboard-control.service
examples/completions/: _tongfang-keyboard-control  tongfang-keyboard-control.bash  tongfang-keyboard-control.fish
package/: PKGBUILD
src/: brightness.rs  cmdline.rs  device_handler.rs  libtkc.rs  light_pattern.rs  main.rs  rgbcolor.rs
src/libtkc/: device_handler.rs  light_pattern.rs  rgbcolor.rs
