[package]
name = "tongfang-keyboard-control"
version = "1.0.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/str0g/tongfang-keyboard-control.git"
homepage = "https://github.com/str0g/tongfang-keyboard-control"
authors = ["Łukasz Buśko lukasz.busko@guns4hire.cc"]
readme = "README.md"
categories = ["hardware-support"]
keywords = ["usb", "hardware", "laptop", "xmg", "tuxedo"]
description = "tongfang keyboard control"
rust-version = "1.83"

[dependencies]
nusb = "0.1.12"
futures-lite = "2.5.0"
clap = { version = "4.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26.4"

[build-dependencies]
clap_complete = "4.5.40"
clap = { version = "4.0", features = ["derive"] }
